# camels-post

./: README.md  pyproject.toml
src/camels_post/: check.sh  combine_IC.py  disperse2hdf5.py  gadget1to2.py  make_CMD.py  make_Pk.py  make_mesh.py  post_process.sh  postprocess.py  utils.py  virtual_snap.py
src/camels_post/presets/: gadget-nbody.sh  gadget.sh  swimba.sh
src/camels_post/systems/: popeye.sh  rusty.sh
